<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background_color"
    tools:context=".Register">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="205dp"
        android:layout_height="140dp"
        android:layout_marginBottom="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113"
        app:srcCompat="@drawable/sick_notes_logo_jpeg" />

    <EditText
        android:id="@+id/register_Name"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_marginTop="136dp"
        android:autofillHints=""
        android:background="@drawable/email_bg"
        android:hint="@string/full_name"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="@color/wine_red"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="319dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:background="@drawable/email_bg"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="@color/wine_red"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/register_Name" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/email_bg"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="@color/wine_red"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/register_email" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="333dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/email_bg"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="@color/wine_red"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/register_password" />

    <Button
        android:id="@+id/register_button2"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register_new_account"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        android:backgroundTint="@color/wine_red" />

</androidx.constraintlayout.widget.ConstraintLayout>