<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/granny_smith_apple">


    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:backgroundTint="#6B2737"
        android:text="Back" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:background="@drawable/email_bg"
        android:layout_height="36dp"/>

    <TextView
        android:id="@+id/deviceName"
        android:layout_below="@id/status"
        android:background="@drawable/email_bg"
        android:layout_width="match_parent"
        android:layout_height="36dp"/>

    <LinearLayout
        android:id="@+id/dataArea"
        android:layout_width="match_parent"
        android:layout_height="448dp"
        android:layout_below="@id/deviceName"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/accel_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/email_bg"
            android:text="@string/accel"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/accel_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/accel_label"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accel_x"
                android:textColor="@color/wine_red" />

            <TextView
                android:id="@+id/accel_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accel_y"
                android:textColor="@color/wine_red" />

            <TextView
                android:id="@+id/accel_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accel_z"
                android:textColor="@color/wine_red" />

            <TextView
                android:id="@+id/accel_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="50dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/bvp_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/accel_area"
            android:layout_marginTop="10dp"
            android:text="Blood Volume Pulse"
            android:textColor="@color/wine_red"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/bvp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bvp_label" />

        <TextView
            android:id="@+id/eda_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bvp"
            android:layout_marginTop="10dp"
            android:text="ElectroDermal Activity"
            android:textColor="@color/wine_red"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/eda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eda_label" />

        <TextView
            android:id="@+id/ibi_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eda"
            android:layout_marginTop="10dp"
            android:text="Inter Beat Interval"
            android:textColor="@color/wine_red"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ibi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ibi_label" />

        <TextView
            android:id="@+id/temp_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ibi"
            android:layout_marginTop="10dp"
            android:text="@string/temp_label"
            android:textColor="@color/wine_red"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temp_label" />

        <TextView
            android:id="@+id/battery_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temperature"
            android:layout_marginTop="10dp"
            android:text="@string/battery_label"
            android:textColor="@color/wine_red"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/battery_label" />

        <TextView
            android:id="@+id/wrist_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wrist_status_label" />

        <Button
            android:id="@+id/disconnectButton"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:backgroundTint="@color/wine_red"
            android:text="STOP STREAMING" />


    </LinearLayout>

</LinearLayout>